--- a/js/_doc/index.html
+++ b/js/_doc/index.html
@@ -1,20 +1,24 @@
-<h2>КАРТА ФУНКЦИЙ</h2>
-<h3>Селекторы</h3>
-<p><strong>Базовые</strong></p>
+<h2>section1</h2>
+<h3>section1_1</h3>
 <ul>
-  <li><a href="" class="doc">#id</a></li>
-  <li><a href="" class="doc">.class</a></li>
-  <li><a href="" class="doc">tagName</a></li>
-  <li><a href="" class="doc">*</a></li>
+  <li><a class="doc">section1-header1</a></li>
+  <li><a class="doc">section1-header2</a></li>
+  <li><a class="doc">section1-header3</a></li>
 </ul>
-<h3>События</h3>
-<p><strong>Базовые</strong></p>
+<h3>section1_2</h3>
 <ul>
-  <li>
-    <a class="doc">.on()</a>
-  </li>
+  <li><a class="doc">section1-header5</a></li>
 </ul>
-<h2>Раздел 2</h2>
-<p><a class="doc">Цель 2-1</a></p>
-<h3>Подраздел 2-1</h3>
-<h2>Раздел 3</h2>
+<h2>section2</h2>
+<h3>section2_1</h3>
+<ul>
+  <li><a class="doc">section2_1-header1</a></li>
+  <li><a class="doc">section2_1-header2</a></li>
+  <li><a class="doc">section2_1-header3</a></li>
+</ul>
+<h3>section2_2</h3>
+<ul>
+  <li><a class="doc">section2_2-header1</a></li>
+  <li><a class="doc">section2_2-header2</a></li>
+  <li><a class="doc">section2_2-header3</a></li>
+</ul>
