--- a/sublime-text-3/all.html
+++ b/sublime-text-3/all.html
@@ -263,6 +263,19 @@ git clone https://github.com/titoBouzout/Tag.git
 <p>После этого добавляем плагин через PackageControl.</p>
 <h3>HexViewer</h3>
 <p>Редактирование шестнадцатиричных и бинарных файлов</p>
+
+<h2>Rsub</h2>
+TODO
+
+Редактирование удалённых файлов на локальной машине в Sublime Text
+
+Host zlatovrmate
+    HostName asdasdasd
+    User asdasdasd
+    Port 22
+    IdentityFile ~/.ssh/id_rsa
+    RemoteForward 52698 localhost:52698
+
 <h2>Автокомлит</h2>
 <h3>Снипеты</h3>
 <h3>Завершения (Completions)</h3>
