--- a/js/array/array.html
+++ b/js/array/array.html
@@ -26,6 +26,7 @@
       // a.splice(i,1)
       // Не остановится, уьерёт все
       // break
+      // continue
       // return false
     }
   })
