--- a/mysql/all.html
+++ b/mysql/all.html
@@ -601,7 +601,10 @@ skip-grant-tables
 <pre class="copyToClipboard lang-sql">flush privileges;</pre>
 <pre class="copyToClipboard lang-sql">grant all ON *.* TO `root`@`localhost` identified by 'mypassword' with grant option;</pre>
 <p>4. Удалим <var>skip-grant-tables</var>, перезагрузим mysql.</p>
+
+
 <h2>Тестирование</h2>
+
 <h3>Ошибки, предупреждения и их количество</h3>
 <pre class="prettyprint lang-sql">
 SHOW COUNT(*) ERRORS;
@@ -626,28 +629,81 @@ subl iadfeshchm-pc.log
 </pre>
 <p>Не забываем отключить логирование, а то распухнет!</p>
 <pre class="prettyprint lang-sql copyToClipboard">SET GLOBAL GENERAL_LOG = 0;</pre>
+
 <h3>Отключить кеширование для определения времени</h3>
 <pre class="prettyprint lang-sql">SELECT SQL_NO_CACHE ...</pre>
+
 <h3>Статус таблиц БД</h3>
 Сколько дискового пространства занимаю данные таблиц, ключи и другое...
 <pre class="prettyprint lang-sql">SHOW TABLE STATUS;
 SHOW TABLE STATUS FROM signforum_new;</pre>
+
 <h3>EXPLAIN</h3>
 <pre class="prettyprint lang-sql">EXPLAIN table_name; -- ключи...
 EXPLAIN SELECT ...; -- план выполнения запроса</pre>
+
+<ul>
+<li><b>id</b> – порядковый номер для каждого SELECT’а внутри запроса (когда имеется несколько подзапросов)</li>
+<li><b>select_type</b> – тип запроса SELECT.<br>
+<br>
+<ul>
+<li><b>SIMPLE</b> — Простой запрос SELECT без подзапросов или UNION’ов</li>
+<li><b>PRIMARY</b> – данный SELECT – самый внешний запрос в JOIN’е</li>
+<li><b>DERIVED</b> – данный SELECT является частью подзапроса внутри FROM </li>
+<li><b>SUBQUERY</b> – первый SELECT в подзапросе</li>
+<li><b>DEPENDENT SUBQUERY</b> – подзапрос, который зависит от внешнего запроса</li>
+<li><b>UNCACHABLE SUBQUERY</b> – не кешируемый подзапрос (существуют определенные условия для того, чтобы запрос кешировался)</li>
+<li><b>UNION</b> – второй или последующий SELECT в UNION’е</li>
+<li><b>DEPENDENT UNION</b> – второй или последующий SELECT в UNION’е, зависимый от внешнего запроса</li>
+<li><b>UNION RESULT</b> – результат UNION’а</li>
+</ul><br>
+</li>
+<li><b>Table</b> – таблица, к которой относится выводимая строка</li>
+<li><b>Type </b> — указывает на то, как MySQL связывает используемые таблицы. Это одно из наиболее полезных полей в выводе потому, что может сообщать об отсутствующих индексах или почему написанный запрос должен быть пересмотрен и переписан. <br>
+Возможные значения:<br>
+<br>
+<ul>
+<li><b>System</b> – таблица имеет только одну строку</li>
+<li><b>Const</b> – таблица имеет только одну соответствующую строку, которая проиндексирована. Это наиболее быстрый тип соединения потому, что таблица читается только один раз и значение строки может восприниматься при дальнейших соединениях как константа.</li>
+<li><b>Eq_ref</b> – все части индекса используются для связывания. Используемые индексы: PRIMARY KEY или UNIQUE NOT NULL. Это еще один наилучший возможный тип связывания.</li>
+<li><b>Ref</b> – все соответствующие строки индексного столбца считываются для каждой комбинации строк из предыдущей таблицы. Этот тип соединения для индексированных столбцов выглядит как использование операторов = или &lt; = &gt;</li>
+<li><b>Fulltext</b> – соединение использует полнотекстовый индекс таблицы</li>
+<li><b>Ref_or_null</b> – то же самое, что и ref, но также содержит строки со значением null для столбца</li>
+<li><b>Index_merge</b> – соединение использует список индексов для получения результирующего набора. Столбец key вывода команды EXPLAIN будет содержать список использованных индексов.</li>
+<li><b>Unique_subquery</b> – подзапрос IN возвращает только один результат из таблицы и использует первичный ключ.</li>
+<li><b>Index_subquery</b> – тоже, что и предыдущий, но возвращает более одного результата.</li>
+<li><b>Range</b> – индекс, использованный для нахождения соответствующей строки в определенном диапазоне, обычно, когда ключевой столбец сравнивается с константой, используя операторы вроде: BETWEEN, IN, &gt;, &gt;=, etc.</li>
+<li><b>Index</b> – сканируется все дерево индексов для нахождения соответствующих строк.</li>
+<li><b>All</b> – Для нахождения соответствующих строк используются сканирование всей таблицы. Это наихудший тип соединения и обычно указывает на отсутствие подходящих индексов в таблице.</li>
+</ul><br>
+</li>
+<li><b>Possible_keys</b> – показывает индексы, которые могут быть использованы для нахождения строк в таблице. На практике они могут использоваться, а могут и не использоваться. Фактически, этот столбец может сослужить добрую службу в деле оптимизации запросов, т.к значение NULL указывает на то, что не найдено ни одного подходящего индекса .</li>
+<li><b>Key</b>– указывает на использованный индекс. Этот столбец может содержать индекс, не указанный в столбце possible_keys. В процессе соединения таблиц оптимизатор ищет наилучшие варианты и может найти ключи, которые не отображены в possible_keys, но являются более оптимальными для использования.</li>
+<li><b>Key_len</b> – длина индекса, которую оптимизатор MySQL выбрал для использования. Например, значение key_len, равное 4, означает, что памяти требуется для хранения 4 знаков. На эту тему вот <a href="http://dev.mysql.com/doc/refman/5.0/en/storage-requirements.html">cсылка</a></li>
+<li><b>Ref</b> – указываются столбцы или константы, которые сравниваются с индексом, указанным в поле key. MySQL выберет либо значение константы для сравнения, либо само поле, основываясь на плане выполнения запроса.</li>
+<li><b>Rows</b> – отображает число записей, обработанных для получения выходных данных. Это еще одно очень важное поле, которое дает повод оптимизировать запросы, особенно те, которые используют JOIN’ы и подзапросы.</li>
+<li><b>Extra</b> – содержит дополнительную информацию, относящуюся к плану выполнения запроса. Такие значения как “Using temporary”, “Using filesort” и т.д могут быть индикатором проблемного запроса. С полным списком возможных значений вы можете ознакомиться <a href="http://dev.mysql.com/doc/refman/5.6/en/explain-output.html#explain-extra-information">здесь</a></li>
+</ul>
+
+
 <h2>Ошибки</h2>
+
 <h3>1175. You are using safe update mode and you tried to update a table without a WHERE that uses a KEY column To disable safe mode, toggle the option in Preferences</h3>
 <pre class="prettyprint lang-sql">
 SET SQL_SAFE_UPDATES = 0;
 SET SQL_SAFE_UPDATES = 1;
 </pre>
+
 <h3>mysql: [Warning] Using a password on the command line interface can be insecure.</h3>
 <p><strong>Способ 1</strong>: в начале скрипта в переменные окружения добавить переменную <var>MYSQL_PWD</var>:</p>
 <pre class="prettyprint lang-sh">
 # Вместо использования --password="$DBPASS" в утилите mysql выполните:
 export MYSQL_PWD="$DBPASS" 
 </pre>
+
+
 <h2>Наработки</h2>
+
 <h3>Обновить колонку таблицы из другой таблицы</h3>
 <pre class="prettyprint lang-sql">
 SET SQL_SAFE_UPDATES = 0; -- Только для mysqlWorkbench
