--- a/js/_lorem/lorem.html
+++ b/js/_lorem/lorem.html
@@ -21,6 +21,19 @@
 
     console.log('внешняя глобальная переменная a: ', a)
 
+    // Контроль запуска кода после загрузки Dom и всего остального
+    window.onload = function(){
+    }
+
+    // Контроль запуска кода после загрузки Dom
+    $(document).ready(function() {
+    });
+
+    // Изоляция и передача jQuery чтобы не писать `window.$`.
+    ;(function($) {
+      "use strict"
+    })(jQuery);
+
   </script>
 </body>
 </html>
