--- a/git/all.html
+++ b/git/all.html
@@ -179,15 +179,14 @@ git config --global alias.hist 'log --graph --pretty=format:"%Cred%h%Creset -%C(
 
 <h3>git tag</h3>
 <p>— отметить текущее состояние, как некоторое конечное состояние для новой версии вашего проекта. Используется для создания списка стабильных версий проекта. Имя метки tag может использоваться в командах checkout и других командах, на ровне с именами фиксаций, именами ссылок (HEAD, FETCH_HEAD) и именами веток (master и т.п.).</p>
-<pre>$ git tag</pre>
-<p>— список существующих tag-ов</p>
-<pre>$ git tag -m "описание" tagname</pre>
-<p>— создать метку tag для текущего состояния (на текущей ветке) с именем tagname.</p>
-<pre>$ git tag -d tagname</pre>
-<p>— удалить метку tag с именем tagname</p>
+<p><code class="copyToClipboard">$ git tag</code> — список существующих tag-ов</p>
+<p><code class="copyToClipboard">$ git tag -m "описание" tagname</code> — создать метку tag для текущего состояния (на текущей ветке) с именем tagname.</p>
+<p><code class="copyToClipboard">$ git tag -d tagname</code> — удалить метку tag с именем tagname</p>
 <p><code class="copyToClipboard">git push origin tag_name</code> — To push a single tag</p>
 <p><code class="copyToClipboard">git push --tags</code> — push all tags (not recommended)</p>
 <p><code class="copyToClipboard">git fetch --tags</code> — fetch tags.</p>
+<p><code class="copyToClipboard">git tag -d 12345</code> — удалить тег.</p>
+<p><code class="copyToClipboard">git push --delete origin 12345</code> — запушить удаление тега.</p>
 
 <h2>Настройки</h2>
 <h3>Origin репозиторий без ssl сертификата (<code>unable to access '...': server certificate verification failed.</code>)</h3>
