--- a/bash/all.html
+++ b/bash/all.html
@@ -332,8 +332,7 @@ $ scp ?
 <p><code>apt-get install -f</code> - используется для устранения сбоев в базе пакетов вызванных нарушенными зависимостями.</p>
 <ul>
     <li>
-        <p>Обновить список пакетов, имеющихся в источниках:</p>
-        <pre class="copyToClipboard">apt-get update</pre>
+        <p><code class="copyToClipboard">apt-get update</code> — обновить список пакетов, имеющихся в источниках, по существу база данных <b>доступных пакетов</b> из репозиториев, определенных в файле /etc/apt/sources.list и каталоге /etc/apt/sources.list.d.</p>
         <p>(вы должны регулярно запускать эту команду для обновления списка пакетов)</p>
     </li>
     <li>
