--- a/php/all.html
+++ b/php/all.html
@@ -1,5 +1,9 @@
 <meta charset="utf-8">
 
+<h2>Установка</h2>
+<p><code class="prettyprint lang-sh copyToClipboard">sudo apt-get install php-mbstring</code></p>
+<p><code class="prettyprint lang-sh copyToClipboard">sudo apt-get install php-xml</code></p>
+
 <h2>php.ini</h2>
 <pre class="prettyprint lang-apache">
 upload_max_filesize = 10M
