--- a/semantic-ui/grid/grid1.html
+++ b/semantic-ui/grid/grid1.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<div class="ui container">
+	<div class="ui fluid container">
 		<div class="ui grid">
 			<div class="four wide column ct"></div>
 			<div class="four wide column ct"></div>
@@ -18,6 +18,24 @@
 			<div class="row">
 				<div class="four wide column ct"></div>
 			</div>
+		</div>
+		<div class="ui grid">
+			<div class="row"><div class="one wide column" style="background-color: red;">one</div></div>
+			<div class="row"><div class="two wide column" style="background-color: red;">two</div></div>
+			<div class="row"><div class="three wide column" style="background-color: red;">three</div></div>
+			<div class="row"><div class="four wide column" style="background-color: red;">four</div></div>
+			<div class="row"><div class="five wide column" style="background-color: red;">five</div></div>
+			<div class="row"><div class="six wide column" style="background-color: red;">six</div></div>
+			<div class="row"><div class="seven wide column" style="background-color: red;">seven</div></div>
+			<div class="row"><div class="eight wide column" style="background-color: red;">eight</div></div>
+			<div class="row"><div class="nine wide column" style="background-color: red;">nine</div></div>
+			<div class="row"><div class="ten wide column" style="background-color: red;">ten</div></div>
+			<div class="row"><div class="eleven wide column" style="background-color: red;">eleven</div></div>
+			<div class="row"><div class="twelve wide column" style="background-color: red;">twelve</div></div>
+			<div class="row"><div class="thirteen wide column" style="background-color: red;">thirteen</div></div>
+			<div class="row"><div class="fourteen wide column" style="background-color: red;">fourteen</div></div>
+			<div class="row"><div class="fifteen wide column" style="background-color: red;">fifteen</div></div>
+			<div class="row"><div class="sixteen wide column" style="background-color: red;">sixteen</div></div>
 		</div>
 	</div>
 	<script type="text/javascript" src="/theme/bower/jquery/dist/jquery.js"></script>
