--- a/html/input/input.html
+++ b/html/input/input.html
@@ -8,6 +8,7 @@
    <p><input type="text" name="created" size="1"></p>
    <p><input type="submit"></p>
    <input type="file" name="images" accept="image/jpeg,image/png,image/gif,image/tiff" multiple="">
+   <input id="number" type="number" value="42">
   </form>
  </body>
 </html>
