--- a/sass/all.html
+++ b/sass/all.html
@@ -1,20 +1,19 @@
-<h2>install package</h2>
+<h2>Install</h2>
 <ul>
-	<li><code class="prettyprint lang-sh">##sudo apt-get install bootstrap-sass</code></li>
-	<li><code class="prettyprint lang-sh">sudo apt-get install sass</code></li>
+  <li><code class="prettyprint lang-sh">##sudo apt-get install bootstrap-sass</code></li>
+  <li><code class="prettyprint lang-sh"><del>sudo apt-get install sass</del></code></li>
+  <li><code class="prettyprint lang-sh copyToClipboard">sudo npm install -g sass</code> установит в <var>/usr/local/bin/sass</var></li>
 </ul>
 
 <h2>simply start</h2>
-<p>
-	file: <code>test.scss</code>
-</p>
+<p>file: <code>test.scss</code></p>
 <pre class="prettyprint lang-css">
 $font-stack:    Helvetica, sans-serif;
 $primary-color: #333;
 
 body {
-	font: 100% $font-stack;
-	color: $primary-color;
+  font: 100% $font-stack;
+  color: $primary-color;
 }
 </pre>
 <p>run:</p>
