--- a/bulma/grid/grid.html
+++ b/bulma/grid/grid.html
@@ -2,10 +2,77 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="../../theme/yarn/bulma/css/bulma.min.css">
+  <style type="text/css">
+    .column {
+      box-shadow: inset 0px 0px 5px 0 red;
+    }
+  </style>
 </head>
 <body>
   <div class="container">
-    he
+    <div class="columns">
+      <div class="column is-full">1</div>
+    </div>
+    <div class="columns">
+      <div class="column is-four-fifths">4/5</div>
+      <div class="column">1/5(авто)</div>
+    </div>
+    <div class="columns">
+      <div class="column is-four-fifths">4/5</div>
+      <div class="column">1/10(авто)</div>
+      <div class="column">1/10(авто)</div>
+    </div>
+    <div class="columns">
+      <div class="column is-three-quarters">3/4</div>
+    </div>
+    <div class="columns">
+      <div class="column is-two-thirds">2/3</div>
+      <div class="column">1/9(авто)</div>
+      <div class="column">1/9(авто)</div>
+      <div class="column">1/9(авто)</div>
+    </div>
+    <div class="columns">
+      <div class="column is-three-fifths">3/5</div>
+    </div>
+
+    <div class="columns">
+      <div class="column">?</div>
+      <div class="column">?</div>
+      <div class="column">
+        <div class="columns">
+          <div class="column"></div>
+          <div class="column"></div>
+          <div class="column"></div>
+        </div>
+      </div>
+    </div>
+
+    <div class="columns">
+      <div class="column is-1"></div>
+      <div class="column is-2"></div>
+      <div class="column is-3"></div>
+      <div class="column is-4"></div>
+      <div class="column"></div>
+    </div>
+
+
+    <div class="columns is-mobile">
+      <div class="column is-half is-offset-one-quarter"></div>
+    </div>
+
+    <div class="columns is-mobile">
+      <div class="column is-three-fifths is-offset-one-fifth"></div>
+    </div>
+
+    <div class="columns is-mobile">
+      <div class="column is-4 is-offset-8"></div>
+    </div>
+
+    <div class="columns is-mobile">
+      <div class="column is-11 is-offset-1"></div>
+    </div>
+
   </div>
 </body>
 </html>
