--- a/semantic-ui/_tasks/market_lorem/lorem.html
+++ b/semantic-ui/_tasks/market_lorem/lorem.html
@@ -6,10 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
-  <!-- Site Properties -->
   <title>Theming - Semantic</title>
-  <link rel="stylesheet" type="text/css" href="/theme/npm/semantic/dist/semantic.min.css">
 
+  <link rel="stylesheet" type="text/css" href="/theme/npm/semantic/dist/semantic.min.css">
   <script type="text/javascript" src="/theme/yarn/jquery/dist/jquery.min.js"></script>
   <script type="text/javascript" src="/theme/npm/semantic/dist/semantic.min.js"></script>
 
@@ -31,14 +30,6 @@
       $('.ui.buttons .dropdown.button').dropdown({
         action: 'combo'
       });
-    })
-  ;
-  </script>
-
-  <!--- Example Javascript -->
-  <script>
-  $(document)
-    .ready(function() {
     })
   ;
   </script>
@@ -344,7 +335,7 @@
           <div class="ui button">Two</div>
         </div>
         <div class="ui attached segment">
-          <img src="../assets/images/wireframe/paragraph.png" class="ui wireframe image">
+          <img src="../../../theme/images/320-320-nature.jpg" class="ui wireframe image">
         </div>
         <div class="ui two bottom attached buttons">
           <div class="ui button">One</div>
@@ -948,7 +939,7 @@
               </div>
             </div>
           </div>
-          <img src="../assets/images/wireframe/image.png">
+          <img src="../../../theme/images/320-320-nature.jpg">
         </div>
         <div class="content">
           <div class="header">Title</div>
@@ -972,7 +963,7 @@
               </div>
             </div>
           </div>
-          <img src="../assets/images/wireframe/image.png">
+          <img src="../../../theme/images/320-320-nature.jpg">
         </div>
         <div class="content">
           <a class="header">Name</a>
@@ -990,27 +981,27 @@
       <div class="ui card">
         <div class="ui slide right reveal image">
           <div class="visible content">
-            <img class="ui fluid image" src="../assets/images/avatar/nan.jpg">
+            <img class="ui fluid image" src="../../../theme/images/320-320-nature.jpg">
           </div>
           <div class="hidden content">
-            <img class="ui fluid image" src="../assets/images/avatar/tom.jpg">
+            <img class="ui fluid image" src="../../../theme/images/320-320-nature.jpg">
           </div>
         </div>
         <div class="content">
-          <img src="../assets/images/wireframe/paragraph.png" class="ui wireframe image">
+          <img src="../../../theme/images/320-320-nature.jpg" class="ui wireframe image">
         </div>
       </div>
       <div class="ui card">
         <div class="ui move reveal image">
           <div class="visible content">
-            <img class="ui fluid image" src="../assets/images/avatar/tom.jpg">
+            <img class="ui fluid image" src="../../../theme/images/320-320-nature.jpg">
           </div>
           <div class="hidden content">
-            <img class="ui fluid image" src="../assets/images/avatar/nan.jpg">
+            <img class="ui fluid image" src="../../../theme/images/320-320-nature.jpg">
           </div>
         </div>
         <div class="content">
-          <img src="../assets/images/wireframe/paragraph.png" class="ui wireframe image">
+          <img src="../../../theme/images/320-320-nature.jpg" class="ui wireframe image">
         </div>
       </div>
     </div>
@@ -1027,17 +1018,17 @@
           </span>
         </div>
         <div class="content">
-          <img src="../assets/images/wireframe/paragraph.png" class="ui wireframe image">
+          <img src="../../../theme/images/320-320-nature.jpg" class="ui wireframe image">
         </div>
       </div>
       <div class="ui card">
         <div class="content">
           <div class="header">
-            <img src="../assets/images/wireframe/square-image.png" class="ui avatar right spaced image">
+            <img src="../../../theme/images/854-480-apple-blur.jpg" class="ui avatar right spaced image">
             Abbreviated Header
           </div>
           <div class="description">
-            <img src="../assets/images/wireframe/paragraph.png" class="ui wireframe image">
+            <img src="../../../theme/images/320-320-nature.jpg" class="ui wireframe image">
           </div>
         </div>
         <div class="ui two bottom attached buttons">
@@ -1056,12 +1047,12 @@
             <span class="category">Animals</span>
           </div>
           <div class="description">
-            <img src="../assets/images/wireframe/paragraph.png" class="ui wireframe image">
+            <img src="../../../theme/images/320-320-nature.jpg" class="ui wireframe image">
           </div>
         </div>
         <div class="extra content">
           <div class="right floated author">
-            <img src="../assets/images/wireframe/square-image.png" class="ui avatar image"> Username
+            <img src="../../../theme/images/854-480-apple-blur.jpg" class="ui avatar image"> Username
           </div>
         </div>
       </a>
@@ -1075,7 +1066,7 @@
           </div>
         </div>
         <div class="content">
-          <img src="../assets/images/wireframe/paragraph.png" class="ui wireframe image">
+          <img src="../../../theme/images/320-320-nature.jpg" class="ui wireframe image">
         </div>
         <div class="ui two bottom attached basic buttons">
           <div class="ui button">
@@ -1151,7 +1142,7 @@
     <div class="ui four cards">
       <div class="card">
         <div class="image">
-          <img src="../assets/images/wireframe/image.png">
+          <img src="../../../theme/images/320-320-nature.jpg">
         </div>
         <div class="extra center aligned">
           <div data-rating="4" class="ui star rating"></div>
@@ -1159,7 +1150,7 @@
       </div>
       <div class="card">
         <div class="image">
-          <img src="../assets/images/wireframe/image.png">
+          <img src="../../../theme/images/320-320-nature.jpg">
         </div>
         <div class="extra center aligned">
           <div data-rating="2" class="ui star rating"></div>
@@ -1167,7 +1158,7 @@
       </div>
       <div class="card">
         <div class="image">
-          <img src="../assets/images/wireframe/image.png">
+          <img src="../../../theme/images/320-320-nature.jpg">
         </div>
         <div class="extra center aligned">
           <div data-rating="3" class="ui star rating"></div>
@@ -1175,7 +1166,7 @@
       </div>
       <div class="card">
         <div class="image">
-          <img src="../assets/images/wireframe/image.png">
+          <img src="../../../theme/images/320-320-nature.jpg">
         </div>
         <div class="extra center aligned">
           <div data-rating="4" class="ui star rating"></div>
